# hackathon_TEST

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  check_redis_host.py  debug_calendar.py  fly.toml  fly.toml.example  next.config.js  next.config.mjs  pyproject.toml  requirements.txt  test_redis.py  types.ts
.github/workflows/: deploy.yml
app/: .env.example  auth.py  calendar.py  chat.py  claude_service.py  client_secrets.json  client_secrets.json.example  example.env  health.py  main.py  redis_config.py  requirements.txt  test_claude_service.py  test_time_slot_detection.py
components/: CalendarScheduler.tsx  ChatInterface.tsx  GoogleAuth.tsx
lib/: bots.ts
tests/: test_chat.py  test_date_parsing.py  test_slot_confirmation.py
