[tool.poetry]
name = "backend_app"
version = "0.1.0"
description = "Multi-bot Chat Backend API"
authors = ["Devin <devin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
fastapi-cli = "^0.0.7"
anthropic = "^0.45.2"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.118.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
